--- a/employee-service.yml
+++ b/employee-service.yml
@@ -5,12 +5,13 @@ server:
 
 
 spring:
+  application:
+    name: employee-service
   data:
     mongodb:
       uri: mongodb+srv://employee_user:mongopassword@cluster0.hzayn.mongodb.net/ehr?retryWrites=true&w=majority
-  config:
-    import: optional:configserver:http://localhost:8012
-
+    config:
+      import: optional:configserver:http://localhost:8012
 
 eureka:
   instance:
@@ -20,5 +21,3 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka
-
-
